--- a/styles/app.css
+++ b/styles/app.css
@@ -4,7 +4,7 @@
 }
 
 ul {
-    list-style-image: url('../images/caret-right.svg');
+    list-style: none;
 }
 
 p,
@@ -96,7 +96,7 @@ section {
 }
 
 .skill-icon img {
-    width: 3em;
+    width: 3rem;
     filter: grayscale(100%);
 }
 
@@ -130,10 +130,201 @@ section {
     backdrop-filter: blur(1em);
 }
 
-.job-description h3 {
-    font-weight: 800;
+
+
+.tabs-wrapper {
+    margin-top: 0;
+    padding-top: 0;
+    height: 25rem;
 }
 
-h3 span {
-    color: darkgreen;
+.tabs-container {
+    padding: 0 2rem 2rem;
+}
+
+/**
+ * Tabs Block
+ */
+.tabs-block {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/**
+ * Tabs
+ */
+.tabs {
+    display: flex;
+}
+
+.tabs>ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 15%;
+}
+
+.tabs>ul li {
+    display: inline;
+}
+
+.tabs>ul li a,
+.tabs>ul li a:visited {
+    display: flex;
+    border-bottom: none;
+    border-left: solid 0.1rem rgba(0, 0, 0, 0.2);
+    text-decoration: none;
+    background-color: white;
+    color: rgba(0, 0, 0, 0.5);
+    padding: 0.5rem 1.5rem;
+    transition: all 0.5s ease-in-out;
+    word-wrap: break-word;
+}
+
+.tabs>ul li a:hover,
+.tabs>ul li a:focus,
+.tabs>ul li a:active {
+    border-bottom: none;
+    outline: 0;
+}
+
+.tabs>ul li a.active {
+    background-color: rgba(0, 0, 0, 0.7);
+    border-left: solid 0.15rem black;
+    color: white;
+}
+
+.tabs>ul li a:hover:not(.active) {
+    color: black;
+}
+
+.tabs>ul li a>span {
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+.tabs>ul li a>span.tab-label {
+    display: none;
+}
+
+.tabs section {
+    width: 85%;
+    background-color: #fff;
+    padding: 1rem;
+    display: none;
+    word-wrap: break-word;
+}
+
+.tabs section li::before {
+    content: '▹';
+    position: absolute;
+    left: 0px;
+    color: black;
+}
+
+.tabs section>* {
+    opacity: 0;
+    transform: translateY(20px);
+    transition: opacity 0.5s, transform 0.2s;
+}
+
+.tabs section>*:nth-child(1) {
+    transition-delay: 0.2s;
+}
+
+.tabs section>*:nth-child(2) {
+    transition-delay: 0.3s;
+}
+
+.tabs section>*:nth-child(3) {
+    transition-delay: 0.4s;
+}
+
+.tabs section>*:nth-child(4) {
+    transition-delay: 0.5s;
+}
+
+.tabs section.active {
+    padding: 0 0 0 4rem;
+    display: block;
+    /* margin-left: 4rem; */
+}
+
+.tabs section.active-content>* {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+.tab-body h3>span {
+    color: #669BBC;
+}
+
+.animated-link {
+    display: inline-block;
+    color: #669BBC;
+}
+
+.animated-link:hover {
+    color: #669BBC;
+}
+
+.animated-link::after {
+    content: '';
+    display: block;
+    width: 0;
+    height: 2px;
+    background: #669BBC;
+    transition: width .3s;
+}
+
+.animated-link:hover::after {
+    width: 100%;
+}
+
+@media (min-width: 576px) {
+
+    .tabs>ul {
+        width: 150px;
+    }
+
+    .tabs>ul li a {
+        flex-wrap: wrap;
+    }
+
+    .tabs>ul li a>span {
+        width: 100%;
+    }
+
+    .tabs>ul li a>span.tab-label {
+        width: 100%;
+        display: block;
+        margin-top: 0.2rem;
+    }
+
+    .tabs section {
+        width: calc(100% - 150px);
+        padding: 2rem 2rem;
+    }
+}
+
+@media (min-width: 768px) {
+
+    body {
+        font-size: 1.125rem;
+    }
+
+    .tabs-container {
+        padding: 0 4rem 4rem;
+    }
+}
+
+@media (min-width: 992px) {
+
+    .tabs {
+        width: 800px;
+    }
 }
